--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.0.0
   retrofit: ^2.0.1
   logger: ^1.1.0
+  salomon_bottom_bar: ^3.1.0
 
 dev_dependencies:
   flutter_test:
